@@ -6,6 +6,7 @@ import java.util.Map;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
@@ -73,8 +74,9 @@ public class NotificationService {
         SseEmitterWrapper emitterWrapper = emitterRepository.save(emitterId, new SseEmitterWrapper(sseEmitter));
 
         //채팅방 목록 emitter에 추가
-        List<Long> memberChatRoomIdList = memberChatRoomRepository.findAllByMember(member)
-                .stream().map(memberChatRoom -> memberChatRoom.getChatRoom().getId()).toList();
+        List<Long> memberChatRoomIdList = memberChatRoomRepository.findAllByMember(member).stream()
+                .map(memberChatRoom -> memberChatRoom.getChatRoom().getId())
+                .collect(Collectors.toList());
 
         if (!memberChatRoomIdList.isEmpty()) {
             emitterWrapper.updateChatRoomNotificationStatus(memberChatRoomIdList);
@@ -295,7 +297,7 @@ public class NotificationService {
 
             return NotificationListItemResponse.of(encryptedId, encryptedSenderId, encryptedUrlPK, encryptedCommentId,
                     notification);
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     /**
